<resources>
    <string name="app_name">Welcoming Mode B2B</string>
    <string name="welcome">Welcome</string>
    <string name="greeting">Hello</string>
    <string name="admin">Admin</string>

    <string name="fragment_config">Welcoming skill configuration</string>
    <string name="fragment_custom_greeter">Customize User Greeter Text message </string>
    <string name="fragment_greet_user">Greet User</string>
    <string name="fragment_custom_voice_greeter">Customize User Greeter Voice message</string>

    <string name="feature_walk">WALK</string>
    <string name="feature_play">PLAY</string>
    <string name="feature_call">CALL</string>
    <string name="feature_take_photo">Take a selfie</string>
    <string name="feature_follow">Follow me</string>
    <string name="feature_stop_follow">Stop following</string>
    <string name="feature_play_music">Play music</string>
    <string name="sub_title_play">Try out temi\'s best features</string>
    <string name="sub_title_call">Want to talk to sales?</string>
    <string name="sub_title_walk">Select your destination</string>

    <string name="top_bar_searching_text">Searching</string>
    <string name="top_bar_following_text">Following</string>
    <string name="top_bar_obstacle_detected_text">Obstacle</string>
    <string name="top_bar_hello_text">Hello</string>

    <string name="location_home_base">Home base</string>
    <string name="settings_done">DONE</string>
    <string name="custom_toggle_off">OFF</string>
    <string name="custom_toggle_on">ON</string>
    <string name="settings_greet_user">Greet User</string>
    <string name="settings_greet_user_description">temi will recognize when a person is in front of it and greet its’ user with a displayed message</string>
    <string name="settings_default_message">Default message</string>
    <string name="settings_custom">Custom</string>
    <string name="settings_custom_description">(Customize the displayed message text)</string>
    <string name="settings_default_message_description">(Hello)</string>
    <string name="settings_voice_greeter_description">When enabled temi will also greet by voice</string>
    <string name="settings_voice_greeter">Voice Greeter</string>
    <string name="settings_open_app_list">Open app list</string>
    <string name="custom_input_hint">INPUT TEXT</string>
    <string name="custom_max_length" translatable="false">12</string>
    <string name="custom_alert">Message can’t be empty</string>
    <string name="settings_location_announcements">Location Announcements</string>
    <string name="settings_location_announcements_describe">temi will announce that he is going to a location, and when he has arrived</string>
    <string name="go_to_start_tts">I\'m going to the %s</string>
    <string name="go_to_complete_tts">I\'ve arrived at the %s</string>
    <string name="ask_us">Ask us</string>
    <string name="press_for_assistance">Press for assistance</string>
    <string name="settings_call_page_interface">Call page interface</string>
    <string name="settings_call_button_description">temi will show the call screen when it will recognize the person in front of it</string>
    <string name="settings_auto_call">Auto call</string>
    <string name="settings_auto_call_description">When enabled, temi will automatically call its owner after 5 seconds of non-interaction</string>
    <string name="greet_user_display_message">Display message</string>
    <string name="greet_user_display_message_description">temi will recognize when a person is in front of it and greet its’ user with a displayed message</string>
    <string name="greet_user_displayed_message_text">Displayed message text</string>
    <string name="greet_user_voice_greeting_message">Voice greeting message</string>
    <string name="greet_user_voice_greeter_description">When enabled temi will also greet by voice</string>
    <string name="greeter_message_for_video_call">Welcome to temi. Press call button if you need any help</string>
    <string name="sequence_title">Choose what temi should do</string>
    <string name="settings_starting_screen">Starting screen</string>
    <string name="starting_screen_default">Default</string>
    <string name="starting_screen_default_description">Welcoming default screen that includes three buttons: walk, call, play</string>
    <string name="starting_screen_sequence">Sequence</string>
    <string name="starting_screen_sequence_description">Sequence list screen will appear</string>
    <string name="settings_start_screen_description">This screen will be shown when temi recognize a person or when the user taps on screen</string>
    <string name="settings_on_person_detection">On person detection:</string>
    <string name="settings_on_person_detection_description">On person detection temi will perform one or a couple of the following commands:</string>
    <string name="settings_call_button">Call button</string>
</resources>
