<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/black"
        android:orientation="vertical"
        android:paddingStart="242dp"
        android:paddingTop="60dp"
        android:paddingEnd="238dp">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/textViewGreetUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings_greet_user"
            android:textColor="@color/white"
            android:textSize="28sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/linearLayoutForGreetUserConfig"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="@id/textViewGreetUser"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/textViewGreetUser">

            <TextView
                android:id="@+id/textViewGreetUserToggle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/custom_toggle_on"
                android:textColor="@color/color_text_view_toggle_indicator"
                android:textSize="24sp" />

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="21dp"
                android:background="@null"
                android:src="@drawable/ic_next" />
        </LinearLayout>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/textViewGreetUserDescription"
            android:layout_width="604dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/settings_greet_user_description"
            android:textColor="@color/gray200"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textViewGreetUser" />

        <View
            android:id="@+id/viewFirst"
            android:layout_width="800dp"
            android:layout_height="1dp"
            android:layout_marginTop="35dp"
            android:background="@color/gray4c"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textViewGreetUserDescription" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/textViewLocationAnnouncements"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:text="@string/settings_location_announcements"
            android:textColor="@color/white"
            android:textSize="28sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/viewFirst" />

        <com.robotemi.welcomingbtob.widgets.CustomToggle
            android:id="@+id/customToggleLocationAnnouncements"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="104dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/textViewLocationAnnouncements" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/textViewLocationAnnouncementsDescription"
            android:layout_width="604dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/settings_location_announcements_describe"
            android:textColor="@color/gray200"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textViewLocationAnnouncements" />

        <View
            android:id="@+id/viewSecond"
            android:layout_width="800dp"
            android:layout_height="1dp"
            android:layout_marginTop="35dp"
            android:background="@color/gray4c"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textViewLocationAnnouncementsDescription" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/textViewCallPage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:text="@string/settings_call_page_interface"
            android:textColor="@color/white"
            android:textSize="28sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/viewSecond" />

        <com.robotemi.welcomingbtob.widgets.CustomToggle
            android:id="@+id/customToggleCallPage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/textViewCallPage" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/textViewCallPageDescription"
            android:layout_width="604dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/settings_call_page_description"
            android:textColor="@color/gray200"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textViewCallPage" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/textViewAutoCall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="37dp"
            android:text="@string/settings_auto_call"
            android:textColor="@color/white"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textViewCallPageDescription" />

        <com.robotemi.welcomingbtob.widgets.CustomToggle
            android:id="@+id/customToggleAutoCall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/textViewAutoCall" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/textViewAutoCallDescription"
            android:layout_width="604dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/settings_auto_call_description"
            android:textColor="@color/gray200"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textViewAutoCall" />

        <View
            android:id="@+id/viewThird"
            android:layout_width="800dp"
            android:layout_height="1dp"
            android:layout_marginTop="35dp"
            android:background="@color/gray4c"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textViewAutoCallDescription" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/textViewOpenAppList"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingTop="35dp"
            android:paddingBottom="31dp"
            android:text="@string/settings_open_app_list"
            android:textColor="@color/white"
            android:textSize="28sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/viewThird" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>