<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/black"
        android:orientation="vertical"
        android:paddingStart="242dp"
        android:paddingTop="60dp"
        android:paddingEnd="238dp">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/textViewDisplayMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/greet_user_display_message"
            android:textColor="@color/white"
            android:textSize="28sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.robotemi.welcomingbtob.widgets.CustomToggle
            android:id="@+id/customToggleDisplayMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="104dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/textViewDisplayMessage" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/textViewDisplayMessageDescription"
            android:layout_width="604dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/greet_user_display_message_description"
            android:textColor="@color/gray200"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textViewDisplayMessage" />

        <View
            android:id="@+id/viewFirst"
            android:layout_width="800dp"
            android:layout_height="1dp"
            android:layout_marginTop="35dp"
            android:background="@color/gray4c"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textViewDisplayMessageDescription" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/textViewDisplayedMessageText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:text="@string/greet_user_displayed_message_text"
            android:textColor="@color/white"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/viewFirst" />

        <LinearLayout
            android:id="@+id/linearLayoutForSettingDisplayMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="@id/textViewDisplayedMessageText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/textViewDisplayedMessageText">

            <TextView
                android:id="@+id/textViewDisplayedMessageContent"
                android:layout_width="445dp"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:gravity="end"
                android:maxLines="1"
                android:textColor="@color/gray200"
                android:textSize="24sp"
                tools:text="Hello, welcome to temi office please wait for.." />

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="21dp"
                android:background="@null"
                android:src="@drawable/ic_next" />
        </LinearLayout>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/textViewVoiceGreeter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="120dp"
            android:text="@string/settings_voice_greeter"
            android:textColor="@color/white"
            android:textSize="28sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textViewDisplayedMessageText" />

        <com.robotemi.welcomingbtob.widgets.CustomToggle
            android:id="@+id/customToggleVoiceGreeter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="104dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/textViewVoiceGreeter" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/textViewVoiceGreeterDescription"
            android:layout_width="604dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/greet_user_voice_greeter_description"
            android:textColor="@color/gray200"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textViewVoiceGreeter" />

        <View
            android:id="@+id/viewSecond"
            android:layout_width="800dp"
            android:layout_height="1dp"
            android:layout_marginTop="35dp"
            android:background="@color/gray4c"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textViewVoiceGreeterDescription" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/textViewVoiceGreetingMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:layout_marginBottom="51dp"
            android:text="@string/greet_user_voice_greeting_message"
            android:textColor="@color/white"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/viewSecond" />

        <LinearLayout
            android:id="@+id/linearLayoutForSettingVoiceGreetingMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="@id/textViewVoiceGreetingMessage"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/textViewVoiceGreetingMessage">

            <TextView
                android:id="@+id/textViewVoiceGreetingContent"
                android:layout_width="445dp"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="1"
                android:gravity="end"
                android:textColor="@color/gray200"
                android:textSize="24sp"
                tools:text="Hello, welcome to temi office please wait for.." />

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="21dp"
                android:background="@null"
                android:src="@drawable/ic_next" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>